// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Timer Component - Visual Tests matches snapshot in idle state 1`] = `
<div>
  <div
    class="timer-container"
  >
    <h2>
      Timer
    </h2>
    <div
      class="timer-display"
    >
      <div
        class="time-input"
      >
        <div
          class="time-unit"
        >
          <button
            class="increment-btn"
          >
            ▲
          </button>
          <input
            class="time-input-field"
            min="0"
            type="text"
            value="00"
          />
          <button
            class="decrement-btn"
          >
            ▼
          </button>
          <label>
            Hours
          </label>
        </div>
        <div
          class="separator"
        >
          :
        </div>
        <div
          class="time-unit"
        >
          <button
            class="increment-btn"
          >
            ▲
          </button>
          <input
            class="time-input-field"
            max="59"
            min="0"
            type="text"
            value="01"
          />
          <button
            class="decrement-btn"
          >
            ▼
          </button>
          <label>
            Minutes
          </label>
        </div>
        <div
          class="separator"
        >
          :
        </div>
        <div
          class="time-unit"
        >
          <button
            class="increment-btn"
          >
            ▲
          </button>
          <input
            class="time-input-field"
            max="59"
            min="0"
            type="text"
            value="00"
          />
          <button
            class="decrement-btn"
          >
            ▼
          </button>
          <label>
            Seconds
          </label>
        </div>
      </div>
      <div
        class="large-timer-display"
      >
        00:00:00
      </div>
    </div>
    <div
      class="preset-buttons"
    >
      <button
        class="preset-btn"
      >
        1 min
      </button>
      <button
        class="preset-btn"
      >
        5 min
      </button>
      <button
        class="preset-btn"
      >
        10 min
      </button>
      <button
        class="preset-btn"
      >
        15 min
      </button>
      <button
        class="preset-btn"
      >
        30 min
      </button>
      <button
        class="preset-btn"
      >
        1 hour
      </button>
    </div>
    <div
      class="controls"
    >
      <button
        class="btn btn-primary"
      >
        Start
      </button>
      <button
        class="btn btn-secondary"
      >
        Reset
      </button>
      <button
        class="btn btn-danger"
      >
        Cancel
      </button>
    </div>
    <div
      class="options"
    >
      <label
        class="checkbox-label"
      >
        <input
          checked=""
          type="checkbox"
        />
        <span>
          Audio alarm
        </span>
      </label>
      <label
        class="checkbox-label"
      >
        <input
          type="checkbox"
        />
        <span>
          Show timer to all
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Timer Component - Visual Tests matches snapshot when audio alarm is toggled off 1`] = `
<div>
  <div
    class="timer-container"
  >
    <h2>
      Timer
    </h2>
    <div
      class="timer-display"
    >
      <div
        class="time-input"
      >
        <div
          class="time-unit"
        >
          <button
            class="increment-btn"
          >
            ▲
          </button>
          <input
            class="time-input-field"
            min="0"
            type="text"
            value="00"
          />
          <button
            class="decrement-btn"
          >
            ▼
          </button>
          <label>
            Hours
          </label>
        </div>
        <div
          class="separator"
        >
          :
        </div>
        <div
          class="time-unit"
        >
          <button
            class="increment-btn"
          >
            ▲
          </button>
          <input
            class="time-input-field"
            max="59"
            min="0"
            type="text"
            value="01"
          />
          <button
            class="decrement-btn"
          >
            ▼
          </button>
          <label>
            Minutes
          </label>
        </div>
        <div
          class="separator"
        >
          :
        </div>
        <div
          class="time-unit"
        >
          <button
            class="increment-btn"
          >
            ▲
          </button>
          <input
            class="time-input-field"
            max="59"
            min="0"
            type="text"
            value="00"
          />
          <button
            class="decrement-btn"
          >
            ▼
          </button>
          <label>
            Seconds
          </label>
        </div>
      </div>
      <div
        class="large-timer-display"
      >
        00:00:00
      </div>
    </div>
    <div
      class="preset-buttons"
    >
      <button
        class="preset-btn"
      >
        1 min
      </button>
      <button
        class="preset-btn"
      >
        5 min
      </button>
      <button
        class="preset-btn"
      >
        10 min
      </button>
      <button
        class="preset-btn"
      >
        15 min
      </button>
      <button
        class="preset-btn"
      >
        30 min
      </button>
      <button
        class="preset-btn"
      >
        1 hour
      </button>
    </div>
    <div
      class="controls"
    >
      <button
        class="btn btn-primary"
      >
        Start
      </button>
      <button
        class="btn btn-secondary"
      >
        Reset
      </button>
      <button
        class="btn btn-danger"
      >
        Cancel
      </button>
    </div>
    <div
      class="options"
    >
      <label
        class="checkbox-label"
      >
        <input
          checked=""
          type="checkbox"
        />
        <span>
          Audio alarm
        </span>
      </label>
      <label
        class="checkbox-label"
      >
        <input
          type="checkbox"
        />
        <span>
          Show timer to all
        </span>
      </label>
    </div>
  </div>
</div>
`;

exports[`Timer Component - Visual Tests shows Pause button when timer is in running state 1`] = `
<div>
  <div
    class="timer-container"
  >
    <h2>
      Timer
    </h2>
    <div
      class="timer-display"
    >
      <div
        class="time-input"
      >
        <div
          class="time-unit"
        >
          <button
            class="increment-btn"
            disabled=""
          >
            ▲
          </button>
          <input
            class="time-input-field"
            disabled=""
            min="0"
            type="text"
            value="00"
          />
          <button
            class="decrement-btn"
            disabled=""
          >
            ▼
          </button>
          <label>
            Hours
          </label>
        </div>
        <div
          class="separator"
        >
          :
        </div>
        <div
          class="time-unit"
        >
          <button
            class="increment-btn"
            disabled=""
          >
            ▲
          </button>
          <input
            class="time-input-field"
            disabled=""
            max="59"
            min="0"
            type="text"
            value="01"
          />
          <button
            class="decrement-btn"
            disabled=""
          >
            ▼
          </button>
          <label>
            Minutes
          </label>
        </div>
        <div
          class="separator"
        >
          :
        </div>
        <div
          class="time-unit"
        >
          <button
            class="increment-btn"
            disabled=""
          >
            ▲
          </button>
          <input
            class="time-input-field"
            disabled=""
            max="59"
            min="0"
            type="text"
            value="00"
          />
          <button
            class="decrement-btn"
            disabled=""
          >
            ▼
          </button>
          <label>
            Seconds
          </label>
        </div>
      </div>
      <div
        class="large-timer-display"
      >
        00:00:55
      </div>
    </div>
    <div
      class="preset-buttons"
    >
      <button
        class="preset-btn"
        disabled=""
      >
        1 min
      </button>
      <button
        class="preset-btn"
        disabled=""
      >
        5 min
      </button>
      <button
        class="preset-btn"
        disabled=""
      >
        10 min
      </button>
      <button
        class="preset-btn"
        disabled=""
      >
        15 min
      </button>
      <button
        class="preset-btn"
        disabled=""
      >
        30 min
      </button>
      <button
        class="preset-btn"
        disabled=""
      >
        1 hour
      </button>
    </div>
    <div
      class="controls"
    >
      <button
        class="btn btn-secondary"
      >
        Pause
      </button>
      <button
        class="btn btn-secondary"
      >
        Reset
      </button>
      <button
        class="btn btn-danger"
      >
        Cancel
      </button>
    </div>
    <div
      class="options"
    >
      <label
        class="checkbox-label"
      >
        <input
          checked=""
          type="checkbox"
        />
        <span>
          Audio alarm
        </span>
      </label>
      <label
        class="checkbox-label"
      >
        <input
          type="checkbox"
        />
        <span>
          Show timer to all
        </span>
      </label>
    </div>
  </div>
</div>
`;
